# conicspline

./: .gitignore  DESIGN_HISTORY.md  LICENSE  MANIFEST.in  README.md  blend_demo.py  check_devs.py  conicspline.py  conicspline_doc.md  demo_n_transitions.py  diag_xbranch.py  pyproject.toml  scan_all_curves.py  show_all_curves.py  test_cross_guard.py
.github/workflows/: test.yml
tests/: branch_coverage.py  check_find_transitions_stability.py  demo_blend_windows.py  demo_bump_isolated_spline.py  diag_case1_between_knots.py  diag_unified_param.py  hunt_blend_windows.py  hunt_edge_cases.py  hunt_edge_cases_67.py  inspect_blend_windows.py  synthetic_coverage.py  synthetic_edge_cases_67.py  test_exact_conic.py  test_exact_conic.py~  test_orbitkit.py  test_tilted_near_circle_ellipse.py  test_tilted_near_circle_ellipse.py~  visualize_coverage.py
